--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-localization": "^1.0.15",
     "react-multi-language": "^0.4.2",
     "react-scripts": "3.4.1"
   },
