--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-localization": "^1.0.15",
     "react-multi-language": "^0.4.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-simple-dropdown": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
