--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.15.0",
     "base-64": "^0.1.0",
+    "firebase": "^7.15.0",
     "fs-extra": "^9.0.1",
     "jquery": "^3.5.1",
+    "jquery-validation": "^1.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-localization": "^1.0.15",
