--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-multi-language": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-up-button": "^1.6.4",
     "react-simple-dropdown": "^3.2.3"
   },
   "scripts": {
