--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "base-64": "^0.1.0",
-    "firebase": "^7.15.0",
+    "firebase": "^7.15.1",
     "fs-extra": "^9.0.1",
     "jquery": "^3.5.1",
     "jquery-validation": "^1.19.2",
@@ -18,7 +18,8 @@
     "react-multi-language": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-simple-dropdown": "^3.2.3"
+    "react-simple-dropdown": "^3.2.3",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
