--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/storage": "^5.1.0",
     "@popperjs/core": "^2.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -20,9 +21,9 @@
     "react-multi-language": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "validator": "^13.1.1",
     "react-scroll-up-button": "^1.6.4",
-    "react-simple-dropdown": "^3.2.3"
+    "react-simple-dropdown": "^3.2.3",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
