--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
+    "react-image-gallery": "^1.0.7",
     "react-localization": "^1.0.15",
     "react-multi-language": "^0.4.2",
     "react-router-dom": "^5.2.0",
