--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs-extra": "^9.0.1",
     "jquery": "^3.5.1",
     "jquery-validation": "^1.19.2",
+    "moment": "^2.27.0",
     "ora": "^4.0.4",
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
