--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
+    "react-image-crop": "^8.6.5",
     "react-image-gallery": "^1.0.7",
     "react-localization": "^1.0.15",
     "react-multi-language": "^0.4.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll-up-button": "^1.6.4",
     "react-simple-dropdown": "^3.2.3",
     "simple-react-lightbox": "^3.2.3-2",
